@@ -16,6 +16,14 @@
       named first argument requires name \code{formula} in earlier
       versions of \R and name \code{x} now, so portable code should not
       name the argument (code in many packages did).
+
+      \item Calling \code{&&} or \code{||} with an argument of length
+      greater than one now gives a warning (and it is intended that will
+      eventually become an error).
+      
+      \item Calling \code{if} or \code{while} with a condition of length
+      greater than one will give an error rather than a
+      warning. (Planned to be activated in mid-March.)
     }
   }
 
